Use serialized device id in the url
